# storage/api-docs/api-docs.json
@@ -23,7 +23,7 @@
         "application/json"
     ],
     "paths": {
-        "http://localhost:8000/api/news/store": {
+        "/api/news/store": {
             "post": {
                 "summary": "Souscris a un newslatter",
                 "description": "",
@@ -67,7 +67,7 @@
                 }
             }
         },
-        "http://localhost:8000/api/news": {
+        "/api/news": {
             "post": {
                 "summary": "Creer un newsletter",
                 "description": "",
@@ -186,7 +186,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/demandes/2/destroy": {
+        "/api/demandes/2/destroy": {
             "post": {
                 "summary": "supprimer une demande",
                 "description": "",
@@ -213,7 +213,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/demandes/3/refuse": {
+        "/api/demandes/3/refuse": {
             "post": {
                 "summary": "Refuser une demande",
                 "description": "",
@@ -240,7 +240,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/demandes/1/accept": {
+        "/api/demandes/5/accept": {
             "post": {
                 "summary": "Accepter une demande",
                 "description": "",
@@ -267,7 +267,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/demandes/refusedDemande": {
+        "/api/demandes/refusedDemande": {
             "get": {
                 "summary": "demandes refusées",
                 "description": "",
@@ -294,7 +294,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/demandes/acceptedDemande": {
+        "/api/demandes/acceptedDemande": {
             "get": {
                 "summary": "demandes acceptées",
                 "description": "",
@@ -321,7 +321,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/demandes/index": {
+        "/api/demandes/index": {
             "get": {
                 "summary": "demandes en attente",
                 "description": "",
@@ -348,7 +348,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/demandes/1/update": {
+        "/api/demandes/1/update": {
             "post": {
                 "summary": "Modifier une demande",
                 "description": "",
@@ -386,7 +386,7 @@
                 }
             }
         },
-        "http://localhost:8000/api/demandes/store": {
+        "/api/demandes/store": {
             "post": {
                 "summary": "creer une demande",
                 "description": "",
@@ -428,7 +428,7 @@
                             },
                             "example": {
                                 "duree": 1,
-                                "details": "fgyhzgf hkbhrf",
+                                "details": "details",
                                 "email": "pro@gmail.com"
                             }
                         }
@@ -436,7 +436,7 @@
                 }
             }
         },
-        "http://localhost:8000/api/categories/store": {
+        "/api/categories/store": {
             "post": {
                 "summary": "Creer une categorie",
                 "description": "",
@@ -473,14 +473,14 @@
                                 }
                             },
                             "example": {
-                                "nom": "animal"
+                                "nom": "argent"
                             }
                         }
                     }
                 }
             }
         },
-        "http://localhost:8000/api/categories/index": {
+        "/api/categories/index": {
             "get": {
                 "summary": "Liste des categories",
                 "description": "",
@@ -507,7 +507,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/categories/1/update": {
+        "/api/categories/1/update": {
             "post": {
                 "summary": "Modifier une categorie",
                 "description": "",
@@ -551,7 +551,7 @@
                 }
             }
         },
-        "http://localhost:8000/api/categories/1/destroy": {
+        "/api/categories/1/destroy": {
             "delete": {
                 "summary": "Supprimer une categorie",
                 "description": "",
@@ -578,7 +578,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/temoignages/store": {
+        "/api/temoignages/store": {
             "post": {
                 "summary": "Enregistrer témoignage",
                 "description": "",
@@ -622,7 +622,7 @@
                 }
             }
         },
-        "http://localhost:8000/api/temoignages/index": {
+        "/api/temoignages/index": {
             "get": {
                 "summary": "Voir tous les temoignages",
                 "description": "",
@@ -649,7 +649,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/temoignages/1/show": {
+        "/api/temoignages/1/show": {
             "get": {
                 "summary": "Voir un témoignage",
                 "description": "",
@@ -676,7 +676,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/temoignages/1/accept": {
+        "/api/temoignages/1/accept": {
             "post": {
                 "summary": "Accepter un témoignage",
                 "description": "",
@@ -703,7 +703,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/contacts/index": {
+        "/api/contacts/index": {
             "get": {
                 "summary": "Liste des contacts",
                 "description": "",
@@ -730,7 +730,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/contacts/store": {
+        "/api/contacts/store": {
             "post": {
                 "summary": "Enregistré contact",
                 "description": "",
@@ -782,7 +782,7 @@
                 }
             }
         },
-        "http://localhost:8000/api/contacts/1/update": {
+        "/api/contacts/1/update": {
             "post": {
                 "summary": "Modifier contact",
                 "description": "",
@@ -826,7 +826,7 @@
                 }
             }
         },
-        "http://localhost:8000/api/contacts/1/destroy": {
+        "/api/contacts/1/destroy": {
             "delete": {
                 "summary": "Supprimer un contact",
                 "description": "",
@@ -853,7 +853,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/contacts/1/show": {
+        "/api/contacts/1/show": {
             "get": {
                 "summary": "voir un contact",
                 "description": "",
@@ -880,7 +880,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/pubs/1/invalide": {
+        "/api/pubs/1/invalide": {
             "post": {
                 "summary": "invalider une publicité",
                 "description": "",
@@ -907,7 +907,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/pubs/1/show": {
+        "/api/pubs/1/show": {
             "get": {
                 "summary": "voir une publicité",
                 "description": "",
@@ -934,7 +934,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/pubs/index": {
+        "/api/pubs/index": {
             "get": {
                 "summary": "liste des publicités",
                 "description": "",
@@ -961,7 +961,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/pubs/store": {
+        "/api/pubs/store": {
             "post": {
                 "summary": "Creer une publicité",
                 "description": "",
@@ -988,7 +988,61 @@
                 ]
             }
         },
-        "http://localhost:8000/api/biens/1/refuse": {
+        "/api/biens/22/rendreBien": {
+            "post": {
+                "summary": "Mettre un bien comme rendu",
+                "description": "",
+                "responses": {
+                    "201": {
+                        "description": "Created successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": ""
+                            }
+                        }
+                    }
+                },
+                "tags": [
+                    "Biens"
+                ],
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "User-Agent",
+                        "type": "string"
+                    }
+                ]
+            }
+        },
+        "/api/biens/bienUser": {
+            "get": {
+                "summary": "Biens d'un utilisateur",
+                "description": "",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": ""
+                            }
+                        }
+                    }
+                },
+                "tags": [
+                    "Biens"
+                ],
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "User-Agent",
+                        "type": "string"
+                    }
+                ]
+            }
+        },
+        "/api/biens/1/refuse": {
             "post": {
                 "summary": "Refuser un bien",
                 "description": "",
@@ -1015,7 +1069,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/biens/1/accepte": {
+        "/api/biens/1/accepte": {
             "post": {
                 "summary": "Accepter un bien",
                 "description": "",
@@ -1042,7 +1096,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/biens/1/destroy": {
+        "/api/biens/1/destroy": {
             "delete": {
                 "summary": "Supprimer un bien",
                 "description": "",
@@ -1069,7 +1123,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/biens/1/update": {
+        "/api/biens/25/update": {
             "post": {
                 "summary": "Modifier un bien",
                 "description": "",
@@ -1096,7 +1150,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/biens/1/show": {
+        "/api/biens/2/show": {
             "get": {
                 "summary": "récupérer un bien",
                 "description": "",
@@ -1123,7 +1177,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/biens/index": {
+        "/api/biens/index/4": {
             "get": {
                 "summary": "liste des biens trouvés",
                 "description": "",
@@ -1150,7 +1204,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/biens/store": {
+        "/api/biens/store": {
             "post": {
                 "summary": "déclarer bien",
                 "description": "",
@@ -1175,6 +1229,50 @@
                         "type": "string"
                     }
                 ]
+            }
+        },
+        "/api/forget-password": {
+            "post": {
+                "summary": "reset password",
+                "description": "",
+                "responses": {
+                    "201": {
+                        "description": "Created successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": ""
+                            }
+                        }
+                    }
+                },
+                "tags": [
+                    "Users"
+                ],
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "User-Agent",
+                        "type": "string"
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "email": {
+                                        "type": "string"
+                                    }
+                                }
+                            },
+                            "example": {
+                                "email": "hamadhyfall21@gmail.com"
+                            }
+                        }
+                    }
+                }
             }
         },
         "/api/users/whatsapp/4": {
@@ -1231,7 +1329,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/users/1/update": {
+        "/api/users/1/update": {
             "post": {
                 "summary": "Modification utilisateur",
                 "description": "",
@@ -1275,7 +1373,7 @@
                 }
             }
         },
-        "http://localhost:8000/api/users/archives": {
+        "/api/users/archives": {
             "get": {
                 "summary": "utilisateurs archives",
                 "description": "",
@@ -1302,7 +1400,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/users/nonArchives": {
+        "/api/users/nonArchives": {
             "get": {
                 "summary": "utilisateurs non archives",
                 "description": "",
@@ -1329,7 +1427,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/1/archive": {
+        "/api/1/archive": {
             "put": {
                 "summary": "archivage",
                 "description": "",
@@ -1356,7 +1454,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/auth/logout": {
+        "/api/auth/logout": {
             "post": {
                 "summary": "déconnexion",
                 "description": "",
@@ -1383,7 +1481,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/users/index": {
+        "/api/users/index": {
             "get": {
                 "summary": "liste des utilisateurs",
                 "description": "",
@@ -1410,7 +1508,7 @@
                 ]
             }
         },
-        "http://localhost:8000/api/login": {
+        "/api/login": {
             "post": {
                 "summary": "authentification",
                 "description": "",
@@ -1450,15 +1548,15 @@
                                 }
                             },
                             "example": {
-                                "email": "ba@gmail.com",
-                                "password": "@zerty123"
+                                "email": "hamadhyfall21@gmail.com",
+                                "password": "papafall21"
                             }
                         }
                     }
                 }
             }
         },
-        "http://localhost:8000/api/register": {
+        "/api/register": {
             "post": {
                 "summary": "inscription",
                 "description": "",
@@ -1508,10 +1606,10 @@
                                 }
                             },
                             "example": {
-                                "name": "ba",
+                                "name": "papa",
                                 "firstName": "mountaga",
-                                "phone": 709693363,
-                                "email": "ba@gmail.com",
+                                "phone": 776854665,
+                                "email": "hamadhyfall21@gmail.com",
                                 "password": "@zerty123",
                                 "confirmPassword": "@zerty123"
                             }
